<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="state"
            type="com.aman.realstate.ui.MainState" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{state.success ? View.VISIBLE : View.GONE}">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_property_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/property_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Property Type"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_propery_type"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_property_type" />

                <!-- Chips can be declared here, or added dynamically. -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_propery_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_property_type"
                    app:singleSelection="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_rooms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/no_of_rooms"
                    android:fontFamily="sans-serif-black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cg_propery_type"
                    tools:text="No. of Rooms" />

                <!-- Chips can be declared here, or added dynamically. -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_rooms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_rooms"
                    app:singleSelection="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_other_facilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/other_facilities"
                    android:fontFamily="sans-serif-black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cg_rooms"
                    tools:text="Other Facilities" />

                <!-- Chips can be declared here, or added dynamically. -->
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_other_facilities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_other_facilities"
                    app:singleSelection="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_thin"
            android:text="@string/error_message"
            android:textColor="@android:color/background_dark"
            android:textSize="56sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="@color/retry_bg"
            android:text="@string/retry"
            android:textColor="@android:color/background_light"
            app:layout_constraintEnd_toEndOf="@+id/tv_error_message"
            app:layout_constraintStart_toStartOf="@+id/tv_error_message"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_message" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupRetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{state.failure ? View.VISIBLE : View.GONE}"
            app:constraint_referenced_ids="tv_error_message,btn_retry" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{state.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_search"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_bg"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:visibility="@{state.success ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
